crates/php-parser/tests/snapshots/malformed_php__function_unclosed_body.snap
---
source: crates/php-parser/tests/malformed_php.rs
expression: msgs
---
unclosed ''}'' opened at Span { start: 22, end: 23 }
