crates/php-parser/tests/snapshots/malformed_php__function_unclosed_params.snap
---
source: crates/php-parser/tests/malformed_php.rs
expression: msgs
---
unclosed '')'' opened at Span { start: 19, end: 20 }
