crates/php-parser/tests/snapshots/malformed_php__if_missing_condition.snap
---
source: crates/php-parser/tests/malformed_php.rs
expression: msgs
---
expected '(', found '{'
expected expression
unclosed '')'' opened at Span { start: 9, end: 10 }
expected statement
