crates/php-parser/tests/snapshots/malformed_php__if_unclosed_condition.snap
---
source: crates/php-parser/tests/malformed_php.rs
expression: msgs
---
expected expression
unclosed '')'' opened at Span { start: 9, end: 10 }
expected statement
