crates/php-parser/tests/snapshots/malformed_php__incomplete_match.snap
---
source: crates/php-parser/tests/malformed_php.rs
expression: msgs
---
expected '}', found end of file
expected ';' after expression
