crates/php-parser/tests/snapshots/malformed_php__incomplete_ternary.snap
---
source: crates/php-parser/tests/malformed_php.rs
expression: msgs
---
expected expression
expected ':', found end of file
expected expression
expected ';' after expression
