crates/php-parser/tests/snapshots/malformed_php__interface_method_with_body.snap
---
source: crates/php-parser/tests/malformed_php.rs
expression: msgs
---
interface method cannot contain a body
