crates/php-parser/tests/snapshots/malformed_php__match_duplicate_default.snap
---
source: crates/php-parser/tests/malformed_php.rs
expression: msgs
---
match expression may only contain one default arm
