crates/php-parser/tests/snapshots/malformed_php__match_missing_comma.snap
---
source: crates/php-parser/tests/malformed_php.rs
expression: msgs
---
expected '}', found integer
expected ';' after expression
expected ';' after expression
expected expression
expected expression
