crates/php-parser/tests/snapshots/malformed_php__match_missing_expression_after_arrow.snap
---
source: crates/php-parser/tests/malformed_php.rs
expression: msgs
---
expected expression
expected ';' after expression
