crates/php-parser/tests/snapshots/malformed_php__multiple_errors_recover_to_valid_function.snap
---
source: crates/php-parser/tests/malformed_php.rs
expression: msgs
---
expected expression
expected expression
