crates/php-parser/tests/snapshots/malformed_php__namespace_unclosed_braces.snap
---
source: crates/php-parser/tests/malformed_php.rs
expression: msgs
---
expected '}', found end of file
